--- a/praesentation/praesentation.tex
+++ b/praesentation/praesentation.tex
@@ -1,6 +1,7 @@
 \documentclass[11pt]{beamer}
 \usetheme{Ilmenau}
 \usecolortheme{beaver}
+%\beamertemplatenavigationsymbolsempty
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 \usepackage{amsfonts}
