--- a/praesentation/praesentation.tex
+++ b/praesentation/praesentation.tex
@@ -2,6 +2,7 @@
 \usetheme{Ilmenau}
 \usecolortheme{beaver}
 %\beamertemplatenavigationsymbolsempty
+\usepackage{multimedia}
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 \usepackage{amsfonts}
@@ -22,33 +23,48 @@
 \tableofcontents
 \end{frame}
 
+
 \section{Frequenzfilter}
 \begin{frame}{Frequenzfilter}
 	\includegraphics[width=\textwidth]{images/1/durchlassfilter}
 \end{frame}
+
 \begin{frame}
 	\includegraphics[width=\textwidth]{images/1/sperrfilter}
 \end{frame}
+
 
 \section{Michelson-Interferometer}
 \begin{frame}
 	\includegraphics[width=\textwidth]{images/2/interferrometer-4}
 \end{frame}
+
 \begin{frame}
 	\includegraphics[width=\textwidth]{images/2/interferrometer-1}
 \end{frame}
+
 \begin{frame}
 	\includegraphics[width=\textwidth]{images/2/interferrometer-2}
 \end{frame}
+
 \begin{frame}
 	\includegraphics[width=\textwidth]{images/2/interferrometer-6}
 \end{frame}
+
 
 \section{Pitot}
 \begin{frame}
 	\includegraphics[width=\textwidth]{images/3/IMG_0004}
 \end{frame}
+
 \begin{frame}
 	\includegraphics[width=\textwidth]{images/3/IMG_0007}
 \end{frame}
+
+
+\section{Doppelpendel}
+\begin{frame}
+\movie[showcontrols=false, once]{\includegraphics[width=\textwidth]{movies/6006_1}}{movies/6006.mov}
+\end{frame}
+
 \end{document}
