+plot und karte

--- a/praesentation/praesentation.tex
+++ b/praesentation/praesentation.tex
@@ -1,6 +1,6 @@
 \documentclass[11pt]{beamer}
 \usetheme{Ilmenau}
-\usecolortheme{beaver}
+%\usecolortheme{beaver}
 %\beamertemplatenavigationsymbolsempty
 \usepackage{multimedia}
 \usepackage[utf8]{inputenc}
@@ -25,12 +25,16 @@
 
 
 \section{Frequenzfilter}
-\begin{frame}{Frequenzfilter}
+\begin{frame}
 	\includegraphics[width=\textwidth]{images/1/durchlassfilter}
 \end{frame}
 
 \begin{frame}
 	\includegraphics[width=\textwidth]{images/1/sperrfilter}
+\end{frame}
+
+\begin{frame}
+	\includegraphics[width=\textwidth]{images/1/plot}
 \end{frame}
 
 
@@ -61,10 +65,13 @@
 	\includegraphics[width=\textwidth]{images/3/IMG_0007}
 \end{frame}
 
+\begin{frame}
+	\includegraphics[width=\textwidth]{images/3/karte.png}
+\end{frame}
 
 \section{Doppelpendel}
 \begin{frame}
-\movie[showcontrols=false, once]{\includegraphics[width=\textwidth]{movies/6006_1}}{movies/6006.mov}
+\movie[showcontrols=false, autostart]{\includegraphics[width=\textwidth]{movies/6006_1}}{movies/6006.mov}
 \end{frame}
 
 \end{document}
