pdf wieder hinzugefügt

--- a/praesentation/praesentation.tex
+++ b/praesentation/praesentation.tex
@@ -1,5 +1,5 @@
 \documentclass[compress,11pt]{beamer}
-\usetheme{fau-4-3}
+\usetheme{Ilmenau}
 %\usecolortheme{beaver}
 %\beamertemplatenavigationsymbolsempty
 \usepackage{multimedia}
