--- a/praesentation/pendel.tex
+++ b/praesentation/pendel.tex
@@ -14,12 +14,11 @@
 \end{frame}
 %\begin{comment}
 \begin{frame}
-
-	\begin{minipage}{.48\textwidth}
+	\begin{columns}
+	\column{.48\textwidth}
 	%\centering
 	\includegraphics[width=\textwidth]{images/4/double-pendulum}
-	\end{minipage}
-	\begin{minipage}{.48\textwidth}
+	\column{.48\textwidth}
 	\begin{block}{}
 		\begin{equation}
 			\vv{x_1}= l_1\cdot\begin{pmatrix}
@@ -35,7 +34,7 @@
 			\end{pmatrix}
 		\end{align}
 	\end{block}
-	\end{minipage}
+	\end{columns}
 \end{frame}
 %\end{comment}
 
@@ -56,5 +55,44 @@ m_2 l_2 \ddot{\varphi_2} + m_2 l_1 (\ddot{\varphi_1} \cos (\varphi_1 - \varphi_2
 
 \subsection{Versuchsdurchführung}
 \begin{frame}
+	\includegraphics[width=\textwidth]{images/4/pendel-10}
+\end{frame}
+
+\begin{frame}
+	\includegraphics[width=\textwidth]{images/4/tischkante}
+\end{frame}
+
+\begin{frame}
 	\movie[showcontrols=false, autostart]{\includegraphics[width=\textwidth]{movies/6006_1}}{movies/6006.mov}
+\end{frame}
+\subsection{Auswertung}
+\begin{frame}
+	\begin{columns}
+	\column{0.5\textwidth}
+	\includegraphics[width=\textwidth]{images/4/pendel-6}\\
+	\includegraphics[width=\textwidth]{images/4/pendel-7}
+	\column{0.5\textwidth}
+	\includegraphics[width=\textwidth]{images/4/pendel-8}\\
+	\includegraphics[width=\textwidth]{images/4/pendel-9}
+	\end{columns}
+\end{frame}
+
+\subsection*{Masse $m_1$ -- Messung und Simulation}
+\begin{frame}
+	\includegraphics[width=\textwidth]{images/4/phi1uebert}
+\end{frame}
+
+\subsection*{Masse $m_1$ -- Phasenraumdiagramm}
+\begin{frame}
+	\includegraphics[width=\textwidth]{images/4/ph1_ueberphi1}
+\end{frame}
+
+\subsection*{Masse $m_2$ -- Messung und Simulation}
+\begin{frame}
+	\includegraphics[width=\textwidth]{images/4/phi2uebert}
+\end{frame}
+
+\subsection*{Masse $m_2$ -- Phasenraumdiagramm}
+\begin{frame}
+	\includegraphics[width=\textwidth]{images/4/phi2_ueberphi2}
 \end{frame}
