lagrange-fkt bearbeitet

--- a/praesentation/pendel.tex
+++ b/praesentation/pendel.tex
@@ -8,7 +8,7 @@
 		\label{lagrangegl}
 		\end{equation}
 		\begin{equation}
-			 L=\sum_i E_{kin,i}-V_i=\sum_i \frac{m_i}{2}\cdot\dot{\vv{x_i}}^2 - m_i \cdot g \cdot z_i
+			 L=\sum_{i=1}^2 E_{kin,i}-V_i=\sum_{i=1}^2 \frac{m_i}{2}\cdot\dot{\vv{x_i}}^2 - m_i \cdot g \cdot z_i
 		\end{equation}
 	\end{block}
 \end{frame}
