änderungen durchfühung und 3 versuche

--- a/praesentation/pendel.tex
+++ b/praesentation/pendel.tex
@@ -1,5 +1,10 @@
 \section{Doppelpendel}
 \subsection{Theorie}
+\begin{frame}{Doppelpendel}
+	\centering
+	\includegraphics[width=.4\textwidth]{images/4/double-pendulum}
+\end{frame}
+
 \begin{frame}{Bestimmung der Bewegungsgleichungen mit Hilfe des Lagrangeformalismus}
 	\begin{block}
 		
@@ -12,6 +17,7 @@
 		\end{equation}
 	\end{block}
 \end{frame}
+
 %\begin{comment}
 \begin{frame}
 	\begin{columns}
