--- a/praesentation/praesentation.tex
+++ b/praesentation/praesentation.tex
@@ -3,6 +3,8 @@
 \usetheme{Ilmenau}
 %\usecolortheme{beaver}
 %\beamertemplatenavigationsymbolsempty
+\usepackage[ngerman]{babel}
+\usepackage{marvosym}
 \usepackage{multimedia}
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
