präsentation ohne trafo video

--- a/praesentation/pendel.tex
+++ b/praesentation/pendel.tex
@@ -61,21 +61,22 @@ m_2 l_2 \ddot{\varphi_2} + m_2 l_1 (\ddot{\varphi_1} \cos (\varphi_1 - \varphi_2
 
 \subsection{Versuchsdurchführung}
 \begin{frame}
-	\includegraphics[width=\textwidth]{images/4/pendel-10}
+	\includegraphics[width=\textwidth]{images/4/foto-pendel}
 \end{frame}
 
 \begin{frame}
-	\includegraphics[width=\textwidth]{images/4/tischkante}
+	\movie[showcontrols=false, autostart]{\includegraphics[width=\textwidth]{movies/6006_1}}{movies/output.mov}
 \end{frame}
 
 \begin{frame}
-	\movie[showcontrols=false, autostart]{\includegraphics[width=\textwidth]{movies/6006_1}}{movies/6006.mov}
+	\includegraphics[width=\textwidth]{images/4/tracker}
 \end{frame}
+
 \subsection{Auswertung}
 \begin{frame}
 	\begin{columns}
 	\column{0.5\textwidth}
-	\includegraphics[width=\textwidth]{images/4/pendel-6}\\
+	\includegraphics[width=\textwidth]{images/4/pendel-3}\\
 	\includegraphics[width=\textwidth]{images/4/pendel-7}
 	\column{0.5\textwidth}
 	\includegraphics[width=\textwidth]{images/4/pendel-8}\\
