--- a/praesentation/praesentation.tex
+++ b/praesentation/praesentation.tex
@@ -1,6 +1,7 @@
 \documentclass[compress,11pt]{beamer}
 %\includeonly{pendel}
 \usetheme{Ilmenau}
+%\usetheme{fau-4-3}
 %\usecolortheme{beaver}
 %\beamertemplatenavigationsymbolsempty
 \usepackage[ngerman]{babel}
