präsentation wie sie gehalten wurde

--- a/praesentation/pendel.tex
+++ b/praesentation/pendel.tex
@@ -103,3 +103,7 @@ m_2 l_2 \ddot{\varphi_2} + m_2 l_1 (\ddot{\varphi_1} \cos (\varphi_1 - \varphi_2
 \begin{frame}
 	\includegraphics[width=\textwidth]{images/4/phi2_ueberphi2}
 \end{frame}
+
+\begin{frame}
+	\movie[showcontrols=false, autostart]{\includegraphics[width=\textwidth]{movies/show.jpg}}{movies/show.mov}
+\end{frame}
